actu porfolio zombie

--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/cerrado.jpeg" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
+                <img src="imatges/zombie.jpg" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
                 <div>
-                    <h3>Títol 2</h3>
-                    <p>Descripció breu.</p>
+                    <h3>Zombie 3D</h3>
+                    <p>Projectar un diseny 3d de un zombie ballant</p>
                 </div>
             </div>
             <div class="box">
