--- a/ex3/ex3.html
+++ b/ex3/ex3.html
@@ -12,7 +12,7 @@
 
 
   <body>
-    <a-scene mindar-image="imageTargetSrc: targets(1).mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
           <a-asset-item id="avatarModel" src="personatge1.glb"></a-asset-item>
         </a-assets>
