--- a/ex3/ex3.html
+++ b/ex3/ex3.html
@@ -33,7 +33,7 @@
                     scale="0.005 0.005 0.005"
                     position="0 0 0"
                     rotation="90 0 0"
-                    animation-mixer ="clip: rumba_dancing" >
+                    animation-mixer ="clip:" >
                 </a-gltf-model>
             </a-entity>      
         </a-scene>
