--- a/ex3/ex3.html
+++ b/ex3/ex3.html
@@ -28,12 +28,7 @@
         </a-entity>      
    
             <a-entity mindar-image-target="targetIndex: 0">
-              <a-gltf-model src="#Walle"
-                    scale="0.005 0.005 0.005"
-                    position="0 0 0"
-                    rotation="90 0 0"
-                    animation-mixer ="clip:" >
-                </a-gltf-model>
+              <a-plane src="#Walle" position="0 0 0" height="1" width="1" rotation="0 0 0"></a-plane> 
             </a-entity>      
 
         <a-entity mindar-image-target="targetIndex: 2">
