--- a/ex3.html
+++ b/ex3.html
@@ -7,49 +7,48 @@
     <!-- Import MindAR -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.0/dist/mindar-image-aframe.prod.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.1.0/dist/aframe-extras.min.js"></script>
-
   </head>
-
 
   <body>
     <a-scene mindar-image="imageTargetSrc: targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
           <a-asset-item id="avatarModel" src="personatge1.glb"></a-asset-item>
-          <img id="#Walle" src="walle.png" /> 
+          <img id="Walle" src="walle.png" /> 
         </a-assets>
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+        
+        <a-camera position="0 1.6 2" look-controls="enabled: true"></a-camera>
+
         <a-entity mindar-image-target="targetIndex: 1">
           <a-gltf-model src="#avatarModel"
                 scale="0.005 0.005 0.005"
                 position="0 0 0"
                 rotation="90 0 0"
-                animation-mixer ="clip: rumba_dancing" >
-            </a-gltf-model>
+                animation-mixer="clip: rumba_dancing">
+          </a-gltf-model>
         </a-entity>      
-   
-            <a-entity mindar-image-target="targetIndex: 0">
-              <a-plane src="#Walle" position="0 0 0" height="1" width="1" rotation="0 0 0"></a-plane> 
-            </a-entity>      
+
+        <a-entity mindar-image-target="targetIndex: 0">
+          <a-plane src="#Walle" position="0 0 0" height="1" width="1" rotation="0 0 0"></a-plane> 
+        </a-entity>      
 
         <a-entity mindar-image-target="targetIndex: 2">
           <a-gltf-model src="#avatarModel"
                 scale="0.005 0.005 0.005"
-                position="0 0 0"
+                position="0 0 0.2"
                 rotation="90 0 0"
-                animation-mixer ="clip: rumba_dancing" >
-            </a-gltf-model>
+                animation-mixer="clip: rumba_dancing">
+          </a-gltf-model>
         </a-entity>      
-
 
         <a-entity mindar-image-target="targetIndex: 3">
           <a-gltf-model src="#avatarModel"
                 scale="0.005 0.005 0.005"
-                position="0 0 0"
+                position="0 0 -0.2"
                 rotation="90 0 0"
-                animation-mixer ="clip: rumba_dancing" >
-            </a-gltf-model>
+                animation-mixer="clip: rumba_dancing">
+          </a-gltf-model>
         </a-entity>      
-</a-scene>
-
+    </a-scene>
   </body>
 </html>
+
