--- a/index.html
+++ b/index.html
@@ -176,13 +176,45 @@
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/cerrado.jpeg" alt="Imatge 3" onclick="location.href='ex3/ex3.html'">
+                <img src="imatges/mapa.png" alt="Imatge 3" onclick="location.href='ex3/ex3.html'">
                 <div>
-                    <h3>Títol 3</h3>
-                    <p>Descripció breu.</p>
+                    <h3>On és el WALLY</h3>
+                    <p>Busca a Wally en el mapa entre los zombies.</p>
                 </div>
             </div>
         </div>
+
+
+    </div>
+</div>
+<div class="box">
+    <img src="imatges/cerrado.jpeg" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
+    <div>
+        <h3>Trabajando</h3>
+        <p>...</p>
+    </div>
+</div>
+
+</div>
+</div>
+<div class="box">
+    <img src="imatges/cerrado.jpeg" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
+    <div>
+        <h3>Trabajando</h3>
+        <p>...</p>
+    </div>
+</div>
+
+</div>
+</div>
+<div class="box">
+    <img src="imatges/cerrado.jpeg" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
+    <div>
+        <h3>Trabajando</h3>
+        <p>...</p>
+    </div>
+</div>
+
       <div class="about" id="sobre-mi">
             <h2>Marc Cepeda Vivas</h2>
             <img src="imatges/perfil.jpg" alt="Foto de perfil">
