--- a/index.html
+++ b/index.html
@@ -163,9 +163,7 @@
                 <img src="imatges/tierra2.png" alt="Imatge 1" onclick="location.href='ex1/ex1.html'">
                 <div>
                     <h3>Una aproximació a les llibreries 3D</h3>
-                    <p>Un petit exercici amb A-frame per testejar l'apliació en diversos dispositius: en pantalla d'ordinador, en format mòbil i a unes ulleres de Realitat Virtual</p>
-                 
-                    
+                    <p>Un petit exercici amb A-frame per testejar l'apliació en diversos dispositius: en pantalla d'ordinador, en format mòbil i a unes ulleres de Realitat Virtual</p>     
                 </div>
             </div>
             <div class="box">
@@ -185,35 +183,30 @@
         </div>
 
 
-    </div>
-</div>
-<div class="box">
-    <img src="imatges/cerrado.jpeg" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
-    <div>
-        <h3>Trabajando</h3>
-        <p>...</p>
-    </div>
-</div>
+        <div class="flex-container" id="exercicis">
+            <div class="box">
+                <img src="imatges/cerrado.jpeg" alt="Imatge 1" onclick="location.href='ex1/ex1.html'">
+                <div>
+                    <h3>Trabajando</h3>
+                    <p>...</p>     
+                </div>
+            </div>
+            <div class="box">
+                <img src="imatges/cerrado.jpeg" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
+                <div>
+                    <h3>Trabajando</h3>
+                    <p>...</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="imatges/cerrado.jpeg" alt="Imatge 3" onclick="location.href='ex3/ex3.html'">
+                <div>
+                    <h3>Trabajando</h3>
+                    <p>...</p>
+                </div>
+            </div>
+        </div>
 
-</div>
-</div>
-<div class="box">
-    <img src="imatges/cerrado.jpeg" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
-    <div>
-        <h3>Trabajando</h3>
-        <p>...</p>
-    </div>
-</div>
-
-</div>
-</div>
-<div class="box">
-    <img src="imatges/cerrado.jpeg" alt="Imatge 2" onclick="location.href='ex2/ex2.html'">
-    <div>
-        <h3>Trabajando</h3>
-        <p>...</p>
-    </div>
-</div>
 
       <div class="about" id="sobre-mi">
             <h2>Marc Cepeda Vivas</h2>
