--- a/ex4/ex4.html
+++ b/ex4/ex4.html
@@ -7,14 +7,19 @@
   <body>
     <a-scene mindar-face embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <a-asset-item id="hatModel" src="hat/scene.gltf"></a-asset-item>
+        <a-asset-item id="hatModel" src="hat.glb"></a-asset-item>
+        <a-asset-item id="mascara" src="mascara_de_gato.glb"></a-asset-item>
     </a-assets>
-
-
       <a-camera active="false" position="0 0 0"></a-camera>
+
       <a-entity mindar-face-target="anchorIndex: 10">
-        <a-gltf-model rotation="0 -0 0" position="0 0.1 -0.5" scale="0.0028 0.0028 0.0028" src="#hatModel" visible="true"></a-gltf-model>
+        <a-gltf-model rotation="0 -0 0" position="0 0.1 -0.5" scale="4 4 4" src="#hatModel" visible="true"></a-gltf-model>
       </a-entity>
+
+      <a-entity mindar-face-target="anchorIndex: 10">
+        <a-gltf-model rotation="0 -0 0" position="0 0.1 -0.5" scale="4 4 4" src="#mascara" visible="true"></a-gltf-model>
+      </a-entity>
+
     </a-scene>
   </body>
 </html>
