--- a/index.html
+++ b/index.html
@@ -185,21 +185,21 @@
 
         <div class="flex-container" id="exercicis">
             <div class="box">
-                <img src="imatges/cerrado.jpeg" alt="Imatge 1" onclick="location.href='ex4/ex4.html'">
+                <img src="imatges/mascara.jpg" alt="Imatge 4" onclick="location.href='ex4/ex4.html'">
                 <div>
-                    <h3>Trabajando</h3>
+                    <h3>Model 3d de la mascara i del barret</h3>
                     <p>...</p>     
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/cerrado.jpeg" alt="Imatge 2" onclick="location.href='ex5/ex5.html'">
+                <img src="imatges/cerrado.jpeg" alt="Imatge 5" onclick="location.href='ex5/ex5.html'">
                 <div>
                     <h3>Trabajando</h3>
                     <p>...</p>
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/cerrado.jpeg" alt="Imatge 3" onclick="location.href='ex6/ex6.html'">
+                <img src="imatges/cerrado.jpeg" alt="Imatge 6" onclick="location.href='ex6/ex6.html'">
                 <div>
                     <h3>Trabajando</h3>
                     <p>...</p>
