--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <img src="imatges/mascara.jpg" alt="Imatge 4" onclick="location.href='ex4/ex4.html'">
                 <div>
                     <h3>Model 3d de la mascara i del barret</h3>
-                    <p>...</p>     
+                    <p>Mascara de la peli amor de gata i baret de harry potter</p>     
                 </div>
             </div>
             <div class="box">
