--- a/index.html
+++ b/index.html
@@ -192,17 +192,17 @@
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/cerrado.jpeg" alt="Imatge 5" onclick="location.href='ex5/ex5.html'">
+                <img src="imatges/captura ej5.png" alt="Imatge 5" onclick="location.href='ex5/ex5.html'">
                 <div>
-                    <h3>Trabajando</h3>
-                    <p>...</p>
+                    <h3>Recorregut de pintures</h3>
+                    <p>Pintures famoses</p>
                 </div>
             </div>
             <div class="box">
-                <img src="imatges/cerrado.jpeg" alt="Imatge 6" onclick="location.href='ex6/ex6.html'">
+                <img src="imatges/casa.png" alt="Imatge 6" onclick="location.href='ex6/ex6.html'">
                 <div>
-                    <h3>Trabajando</h3>
-                    <p>...</p>
+                    <h3> La casa abandonada</h3>
+                    <p>Una casa abandonada amb diferents objectes 3D</p>
                 </div>
             </div>
         </div>
