--- a/index.html
+++ b/index.html
@@ -206,6 +206,20 @@
                 </div>
             </div>
         </div>
+        <div class="box">
+            <img src="imatges/cerrado.jpeg" alt="Imatge 8" onclick="location.href='ex8/ex8.html'">
+            <div>
+                <h3>Trabajando</h3>
+                <p>...</p>
+            </div>
+            <div class="box">
+                <img src="imatges/ej9.png" alt="Imatge 9" onclick="location.href='ex9/ex9.html'">
+                <div>
+                    <h3>Joc 3d aliens</h3>
+                    <p>Diferents figures 3d per la pantalla.</p>
+                </div>
+        </div>
+        </div>
 
 
       <div class="about" id="sobre-mi">
