--- a/index.html
+++ b/index.html
@@ -223,9 +223,16 @@
             <div class="box">
                 <img src="imatges/ej9.png" alt="Imatge 9" onclick="location.href='ex9/ex9.html'">
                 <div>
-                    <h3>Joc 3D d’aliens</h3>
-                    <p>Diferents figures 3D que apareixen per la pantalla.</p>
+                    <h3>Pong</h3>
+                    <p>Joc Pong Moviment amb W S i les fletches</p>
                 </div>
+            </div>
+        </div>
+        <div class="box">
+            <img src="imatges/cerrado.jpeg" alt="Imatge 11" onclick="location.href='ex11/ex11.html'">
+            <div>
+                <h3>Projecte en construcció</h3>
+                <p>...</p>
             </div>
         </div>
 
