--- a/index.html
+++ b/index.html
@@ -223,16 +223,16 @@
             <div class="box">
                 <img src="imatges/ej9.png" alt="Imatge 9" onclick="location.href='ex9/ex9.html'">
                 <div>
-                    <h3>Pong</h3>
-                    <p>Joc Pong Moviment amb W S i les fletches</p>
+                    <h3>Joc d'esteroides</h3>
+                    <p>Diferents figures 3D per disparar amb el ratoli</p>
                 </div>
             </div>
         </div>
         <div class="box">
-            <img src="imatges/cerrado.jpeg" alt="Imatge 11" onclick="location.href='ex11/ex11.html'">
+            <img src="imatges/ej11.png" alt="Imatge 11" onclick="location.href='ex11/ex11.html'">
             <div>
-                <h3>Projecte en construcció</h3>
-                <p>...</p>
+                <h3>Pong</h3>
+                <p>Joc Pong Moviment amb W S i les fletches</p>
             </div>
         </div>
 
