--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             </div>
 
             <div class="box">
-                <img src="imatges/captura_ej5.png" alt="Imatge 5" onclick="location.href='ex5/ex5.html'">
+                <img src="imatges/capturaej5.png" alt="Imatge 5" onclick="location.href='ex5/ex5.html'">
                 <div>
                     <h3>Recorregut de pintures</h3>
                     <p>Pintures famoses exposades en un recorregut virtual.</p>
