--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
             </div>
 
             <div class="box">
-                <img src="imatges/cerrado.jpeg" alt="Imatge 8" onclick="location.href='ex8/ex8.html'">
+                <img src="imatges/ej8.png" alt="Imatge 8" onclick="location.href='ex8/ex8.html'">
                 <div>
-                    <h3>Projecte en construcció</h3>
-                    <p>...</p>
+                    <h3>Conjunt monumental Castellet</h3>
+                    <p>Diferents punts de vista 360 </p>
                 </div>
             </div>
 
